# file.io-cli-tddschn

./: .bumpversion.cfg  .gitignore  AGENTS.md  DEBUG.md  README.md  file_io_cli.py  project-words.txt  pyproject.toml  setup.py
file_io_cli_tddschn/: __init__.py  cli.py  config.py  utils.py
scripts/: gen_readme.py
templates/: README.jinja.md  readme-command-usage.jinja.md
