[tool.poetry]
name = "file.io-cli-tddschn"
version = "1.0.6"
description = "Command-line tool to upload files to https://file.io"
authors = ["Teddy Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
# packages = [{ include = "file_io_cli.py" }]
packages = [{ include = "file_io_cli_tddschn" }]
homepage = "https://github.com/tddschn/file.io-cli-tddschn"
repository = "https://github.com/tddschn/file.io-cli-tddschn"
classifiers = ["Topic :: Utilities"]
keywords = ["file.io", "utility", "uploader", "CLI"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/file.io-cli-tddschn/issues"

[tool.poetry.scripts]
"file.io-cli" = "file_io_cli_tddschn.cli:_entry_point"
"file.io" = "file_io_cli_tddschn.cli:_entry_point"

[tool.poetry.dependencies]
python = "^3.11"
clipboard = ">=0.0.4,<1.0.0"
requests = ">=2.25.1,<3.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
better-exceptions = "^0.3.3"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
