[project]
name = "file.io-cli-tddschn"
version = "1.1.5"
description = "Command-line tool to upload files to https://file.io"
authors = [{ name = "Teddy Xinyuan Chen", email = "45612704+tddschn@users.noreply.github.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "file.io",
    "utility",
    "uploader",
    "CLI",
]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "clipboard>=0.0.4,<1.0.0",
    "requests>=2.25.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/tddschn/file.io-cli-tddschn"
Repository = "https://github.com/tddschn/file.io-cli-tddschn"
"Bug Tracker" = "https://github.com/tddschn/file.io-cli-tddschn/issues"

[project.scripts]
"file.io-cli" = "file_io_cli_tddschn.cli:main_sync"
"file.io" = "file_io_cli_tddschn.cli:main_sync"

[dependency-groups]
dev = [
    "black>=23.3.0,<24",
    "better-exceptions>=0.3.3,<0.4",
    "jinja2>=3.1.2,<4",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["file_io_cli_tddschn"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
